# eduinf4201ba1

./: .gitignore  CMakeLists.txt  README.md  socket_tools.c
exo1/: client.c  msg_tools.c  server.c  serveur.c  tools.c  tools.h
exo2/: client.c  server.c  tools.c  tools.h
exo3/: client.c  tools.c  tools.h
report/: exercice1.tex  exercice2.tex  exercice3.tex  exercice4.tex  exercice5.tex  introduction.tex  report.tex
src/: file_tools.c  file_tools.h  http_tools.c  http_tools.h  socket_tools.c  socket_tools.h
src/exo1/: client.c  msg_tools.c  msg_tools.h  server.c
src/exo2/: client.c  server.c
src/exo2_alt/: client.c
src/exo3/: client.c
src/exo4/: server.c
src/exo5/: client.c
